--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,66 @@ body {
   border-bottom-right-radius: 3px;
   padding: 5px 0 5px 6px; }
 
+@-webkit-keyframes animationWidthFirstLayer {
+  0% {
+    width: 0; }
+  100% {
+    width: 218px; } }
+@-moz-keyframes animationWidthFirstLayer {
+  0% {
+    width: 0; }
+  100% {
+    width: 218px; } }
+@-ms-keyframes animationWidthFirstLayer {
+  0% {
+    width: 0; }
+  100% {
+    width: 218px; } }
+@keyframes animationWidthFirstLayer {
+  0% {
+    width: 0; }
+  100% {
+    width: 218px; } }
+@-webkit-keyframes animationWidthSecondLayer {
+  0% {
+    width: 0; }
+  100% {
+    width: 54px; } }
+@-moz-keyframes animationWidthSecondLayer {
+  0% {
+    width: 0; }
+  100% {
+    width: 54px; } }
+@-ms-keyframes animationWidthSecondLayer {
+  0% {
+    width: 0; }
+  100% {
+    width: 54px; } }
+@keyframes animationWidthSecondLayer {
+  0% {
+    width: 0; }
+  100% {
+    width: 54px; } }
+@-webkit-keyframes animationWidthThreeLayer {
+  0% {
+    width: 0; }
+  100% {
+    width: 36px; } }
+@-moz-keyframes animationWidthThreeLayer {
+  0% {
+    width: 0; }
+  100% {
+    width: 36px; } }
+@-ms-keyframes animationWidthThreeLayer {
+  0% {
+    width: 0; }
+  100% {
+    width: 36px; } }
+@keyframes animationWidthThreeLayer {
+  0% {
+    width: 0; }
+  100% {
+    width: 36px; } }
 .item-services__title--first-layer,
 .item-services__title--second-layer,
 .item-services__title--third-layer {
@@ -162,6 +222,9 @@ body {
   .item-services__title--first-layer::before,
   .item-services__title--second-layer::before,
   .item-services__title--third-layer::before {
+    -webkit-animation: animationWidthFirstLayer 2s ease;
+    -moz-animation: animationWidthFirstLayer 2s ease;
+    animation: animationWidthFirstLayer 2s ease;
     background-color: #b1e19b;
     border-left: 1px solid #83b26d;
     border-top-right-radius: 3px;
@@ -180,9 +243,15 @@ body {
   border-left: 1px solid #7eb4ca; }
 
 .item-services__title--second-layer::before {
+  -webkit-animation: animationWidthSecondLayer 2s ease;
+  -moz-animation: animationWidthSecondLayer 2s ease;
+  animation: animationWidthSecondLayer 2s ease;
   width: 54px; }
 
 .item-services__title--third-layer::before {
+  -webkit-animation: animationWidthThreeLayer 2s ease;
+  -moz-animation: animationWidthThreeLayer 2s ease;
+  animation: animationWidthThreeLayer 2s ease;
   width: 36px; }
 
 .item-services__quantity {
